--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -14794,6 +14794,7 @@ paths:
       tags:
         - Security
       summary: "Login"
+      deprecated: true
       description: "This method should be called to get an API token. This token will expire after
       auth_token_exp_timeout seconds (default: 900). This value can be changed using PUT /security/config"
       operationId: api.controllers.security_controller.login_user
