--- a/api/test/integration/test_cluster_endpoints.tavern.yaml
+++ b/api/test/integration/test_cluster_endpoints.tavern.yaml
@@ -1,6 +1,8 @@
 ---
 test_name: GET /cluster/local/config
 
+marks:
+  - cluster
 stages:
 
   - name: Get cluster config
@@ -31,6 +33,9 @@ stages:
 
 ---
 test_name: GET /cluster/healthcheck
+
+marks:
+  - cluster
 
 stages:
 
@@ -107,6 +112,9 @@ stages:
 ---
 test_name: GET /cluster/local/info
 
+marks:
+  - cluster
+
 stages:
 
   - name: Get cluster node
@@ -131,6 +139,9 @@ stages:
 
 ---
 test_name: GET /cluster/nodes
+
+marks:
+  - cluster
 
 stages:
 
@@ -386,6 +397,7 @@ stages:
 test_name: GET /cluster/nodes
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -422,6 +434,7 @@ stages:
 test_name: GET /cluster/nodes select
 
 marks:
+  - cluster
   - parametrize:
       key: field
       vals:
@@ -453,6 +466,9 @@ stages:
 ---
 test_name: GET /cluster/status
 
+marks:
+  - cluster
+
 stages:
 
   - name: Get cluster status
@@ -472,6 +488,9 @@ stages:
 
 ---
 test_name: GET /cluster/{node_id}/configuration
+
+marks:
+  - cluster
 
 stages:
 
@@ -703,6 +722,9 @@ stages:
 ---
 test_name: GET /cluster/configuration/validation
 
+marks:
+  - cluster
+
 stages:
 
   - name: Request cluster validation
@@ -823,6 +845,9 @@ stages:
 ---
 test_name: GET /cluster/api/config
 
+marks:
+  - cluster
+
 stages:
 
   # GET /cluster/api/config
@@ -906,6 +931,9 @@ stages:
 
 ---
 test_name: GET /cluster/{node_id}/configuration/{component}/{configuration}
+
+marks:
+  - cluster
 
 stages:
 
@@ -1339,6 +1367,7 @@ stages:
 test_name: GET /cluster/{node_id}/info
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1377,6 +1406,7 @@ stages:
 test_name: GET /cluster/{node_id}/logs
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1594,6 +1624,7 @@ stages:
 test_name: GET /cluster/{node_id}/logs/summary
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1624,6 +1655,7 @@ stages:
 test_name: GET /cluster/{node_id}/stats
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1671,6 +1703,9 @@ stages:
 ---
 test_name: GET /cluster/wrong_node/stats
 
+marks:
+  - cluster
+
 stages:
 
   - name: Unexisting_node stats
@@ -1697,6 +1732,7 @@ stages:
 test_name: GET /cluster/{node_id}/stats/analysisd
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1773,6 +1809,7 @@ stages:
 test_name: GET /cluster/{node_id}/stats/hourly
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1805,6 +1842,7 @@ stages:
 test_name: GET /cluster/{node_id}/stats/remoted
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1844,6 +1882,7 @@ stages:
 test_name: GET /cluster/{node_id}/stats/weekly
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1895,6 +1934,7 @@ stages:
 test_name: GET /cluster/{node_id}/status
 
 marks:
+  - cluster
   - parametrize:
       key: node_id
       vals:
@@ -1923,6 +1963,9 @@ stages:
 
 ---
 test_name: PUT /cluster/restart
+
+marks:
+  - cluster
 
 stages:
 
@@ -1971,6 +2014,9 @@ stages:
 
 ---
 test_name: PUT /cluster/{node_id}/configuration
+
+marks:
+  - cluster
 
 stages:
 
