Minor change to libmagic compilation flags

--- a/src/Makefile
+++ b/src/Makefile
@@ -1119,7 +1119,7 @@ $(POPT_BUILD_DIR)Makefile:
 
 ### libmagic lib ###
 
-LIBMAGIC_BUILD_FLAGS += -DZLIB_INC_PATH=$(ROUTE_PATH)/$(EXTERNAL_ZLIB) -DZLIB_LIB_PATH=$(ROUTE_PATH)/$(ZLIB_LIB)
+LIBMAGIC_CFLAGS = -I$(ROUTE_PATH)/$(EXTERNAL_ZLIB -L$(ROUTE_PATH)/$(ZLIB_LIB)
 LIBMAGIC_BUILD_DIR = $(EXTERNAL_LIBMAGIC)build/
 
 
@@ -1127,7 +1127,7 @@ $(LIBMAGIC_LIB): $(LIBMAGIC_BUILD_DIR)Makefile
 	cd $(LIBMAGIC_BUILD_DIR) && $(MAKE)
 
 $(LIBMAGIC_BUILD_DIR)Makefile: $(ZLIB_LIB)
-	mkdir -p $(LIBMAGIC_BUILD_DIR) && cd $(LIBMAGIC_BUILD_DIR) && cmake .. $(LIBMAGIC_BUILD_FLAGS)
+	mkdir -p $(LIBMAGIC_BUILD_DIR) && cd $(LIBMAGIC_BUILD_DIR) && cmake -E env CFLAGS="${LIBMAGIC_CFLAGS}" cmake ..
 
 ### zstd lib ###
 
