--- a/src/data_provider/tests/CMakeLists.txt
+++ b/src/data_provider/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   add_subdirectory(sysInfoPackagesLinuxHelper)
   add_subdirectory(sysInfoPackagesBerkeleyDB)
   add_subdirectory(sysInfoNetworkLinux)
+  add_subdirectory(sysInfoRpmPackageManager)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
   add_subdirectory(sysInfoNetworkBSD)
   add_subdirectory(sysInfoPackagesMAC)
