Add fallback mechanism to RPM packages retrieving  (#11359)
* Add rpm packages retrieving fallback mechanism

* Utils changes strategy to support rpm fallback UT

* Add mechanism to mock static methods.

* Add tests files for linuxParserRpm

* Sysinfo rpm packages UT related tasks

- RPM fallback UT coverage
- Fix rpm fallback command parameter order
- Remove some debugging lines

* Add coverage to getRpmInfo method

* Minor fixes and solving merge conflicts

* Improve getRpmInfo coverage

* Applying some review comments

Co-authored-by: Dwordcito <octa.tala@gmail.com>

--- a/src/data_provider/CMakeLists.txt
+++ b/src/data_provider/CMakeLists.txt
@@ -62,6 +62,7 @@ link_directories(${SRC_FOLDER}/external/libdb/build_unix/)
 if(NOT CMAKE_CHECK_CENTOS5) # Avoid incompatible libraries in CentOS 5 and Red Hat 5
 link_directories(${SRC_FOLDER}/external/pacman/lib/libalpm/)
 link_directories(${SRC_FOLDER}/external/libarchive/.libs/)
+link_directories(${SRC_FOLDER}/external/rpm/builddir/)
 endif(NOT CMAKE_CHECK_CENTOS5)
 link_directories(${SRC_FOLDER}/external/openssl/)
 
