Adding the wdb configuration block to ossec.conf

--- a/etc/ossec.conf
+++ b/etc/ossec.conf
@@ -36,6 +36,15 @@
     <protocol>tcp</protocol>
   </remote>
 
+  <!-- Database management -->
+  <wdb>
+    <backup database='global'>
+      <enabled>yes</enabled>
+      <interval>1d</interval>
+      <max_files>10</max_files>
+    </backup>
+  </wdb>
+
   <!-- Policy monitoring -->
   <rootcheck>
     <disabled>no</disabled>
