Add component tests for db.cpp

--- a/src/syscheckd/src/db/tests/CMakeLists.txt
+++ b/src/syscheckd/src/db/tests/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(db/dbItem/RegistryKey)
 add_subdirectory(db/dbItem/RegistryValue)
 add_subdirectory(db/FIMDB/fimDBTests)
 add_subdirectory(db/ComponentTest/fileInterface)
+add_subdirectory(db/ComponentTest/dbInterface)
