--- a/src/data_provider/CMakeLists.txt
+++ b/src/data_provider/CMakeLists.txt
@@ -111,6 +111,11 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
       "${CMAKE_SOURCE_DIR}/src/*CommonBSD.cpp"
       "${CMAKE_SOURCE_DIR}/src/network/*BSD.cpp"
       "${CMAKE_SOURCE_DIR}/src/osinfo/sysOsParsers.cpp")
+elseif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
+  file(GLOB SYSINFO_SRC
+	    "${CMAKE_SOURCE_DIR}/src/*Solaris.cpp"
+      "${CMAKE_SOURCE_DIR}/src/packages/*Solaris.cpp"
+      "${CMAKE_SOURCE_DIR}/src/osinfo/sysOsParsers.cpp")
 else()
   file(GLOB SYSINFO_SRC
       "${CMAKE_SOURCE_DIR}/src/*Unix.cpp"
