--- a/src/data_provider/tests/CMakeLists.txt
+++ b/src/data_provider/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   add_subdirectory(sysInfoNetworkLinux)
   add_subdirectory(sysInfoRpmPackageManager)
   add_subdirectory(sysInfoPackageLinuxParserRpm)
+  add_subdirectory(sysInfoPackagesSolaris)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
   add_subdirectory(sysInfoNetworkBSD)
   add_subdirectory(sysInfoPackagesMAC)
