Testing wazuh-db settings parser

--- a/src/unit_tests/wazuh_db/CMakeLists.txt
+++ b/src/unit_tests/wazuh_db/CMakeLists.txt
@@ -138,6 +138,9 @@ list(APPEND wdb_tests_flags "-Wl,--wrap,wdb_get_cache_stmt -Wl,--wrap,wdb_step -
                             -Wl,--wrap,sqlite3_bind_text -Wl,--wrap,sqlite3_step -Wl,--wrap,sqlite3_bind_double -Wl,--wrap,sqlite3_changes \
                             -Wl,--wrap,sqlite3_bind_null ${DEBUG_OP_WRAPPERS}")
 
+list(APPEND wdb_tests_names "test_wazuh_db-config")
+list(APPEND wdb_tests_flags "${DEBUG_OP_WRAPPERS}")
+
 # Compilig tests
 list(LENGTH wdb_tests_names count)
 math(EXPR count "${count} - 1")
